--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
     <dependency>
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
-      <version>5.7.0</version>
+      <version>5.3.0</version> <!-- Make sure this is the latest version -->
     </dependency>
+
 
     <!-- Cucumber Core -->
     <dependency>
